css/main.css
h1 {
    margin-bottom: 15px;
    clear: both;
}
h2 {
    margin-bottom: 0px;
    margin-top: 15px;
    clear: both;
}
h3 {
    margin-bottom: 0px;
    margin-top: 15px;
}
li {
    list-style-position: inside;
    margin: 3px;
}
p {
    margin: 4px;
}
input[type=button] {
    margin-top: 4px;
}
.wide {
    margin-top: 10px;
    margin-bottom: 10px;
}
.warning {
    color: darkred;
    font-weight: bold;
}
.sub_li {
    list-style-type: square;
    padding-left: 15px;
}
.credits {
    text-align: left;
    margin-top: 15px;
}
.dead {
    text-decoration: line-through;
}
.admin_icon {
    display: inline;
}
.pages_left {
    float: left;
    width: 50%;
}
.pages_right {
    float: right;
    width: 50%;
}
.page_table {
    border: 3px solid #444;
    border-radius: 16px;
    margin-right: 15px;
    margin-left: 15px;
    list-style: none;
}
.link {
    position: relative;
}
/* temporary */
.link a {
    width: 100%;
}
.link a:hover {
    background-color: #bbb;
}
.tooltip {
    display: none;
}
/*.link .tooltip {
    width: 300px;
}
.link:hover .tooltip {
    visibility: visible;
}
.tooltip_link:link {
    color: #1e90ff;
}
.tooltip_link:active {
    color: red;
}
.tooltip_link:visited {
    color: #ff69b4;
}
.tooltip {
    visibility: hidden;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    z-index: 1;
    top: 100%;
    left: 0%;
}*/
.flag {
    width: 16px;
    height: 16px;
    background-image: url('../shared/spritesheets/flags_sheet.png');
}
.flag_china {
    background-position: -880px 0px;
}
.flag_japan {
    background-position: -912px 0px;
}
.flag_russia {
    background-position: -928px 0px;
}
.flag_uk {
    background-position: -944px 0px;
}
.flag_us {
    background-position: -960px 0px;
}
.flag_germany {
    background-position: -1008px 0px;
}
.flag_spain {
    background-position: -1024px 0px;
}
#nav {
    margin-bottom: 5px;
}
#map {
    width: 53%;
}
#tiers {
    width: 68%;
}
#bottom {
    clear: both;
    padding-top: 25px;
    font-size: 11px;
    color: #505050;
}
#hy_text {
    margin: 4px 0px 0px 0px;
}
#music_links {
    text-align: left;
}
@media only screen and (max-width: 1100px) {
    .page_table > .link > .tooltip {
        width: 200px;
        top: 100%;
        left: 30%;
    }
}
@media only screen and (min-width: 800px) and (max-width: 1100px) {
    ul {
        padding: 0px;
    }
    .wrap {
        margin-left: 10%;
        margin-right: 10%;
    }
    #avatar {
        width: 95%;
    }
}
@media only screen and (max-width: 800px) {
    #avatar {
        width: 95%;
    }
}

